# whattools

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
docs/: api-guide.md  architecture.md  deployment.md  openapi.yaml  whatnot-api-access-proposal.md
helm/whattools/: .helmignore  Chart.yaml  values.yaml
helm/whattools/templates/: _helpers.tpl  analytics-worker.yaml  configmap.yaml  gateway.yaml  hpa.yaml  ingress.yaml  namespace.yaml  network-policies.yaml  observability.yaml  postgres.yaml  redis.yaml  secrets.yaml  services.yaml  web.yaml
k8s/prod/: analytics-worker.yaml  analytics.yaml  auth.yaml  configmap.yaml  gateway.yaml  grafana-dashboards.yaml  grafana.yaml  ingress.yaml  inventory.yaml  loki.yaml  namespace.yaml  postgres.yaml  promtail.yaml  redis.yaml  sales.yaml  shipping.yaml  web.yaml
migrations/: env.py
migrations/versions/: a2b3c4d5e6f7_add_shows_orders.py  b3c4d5e6f7g8_add_shipments.py  c4d5e6f7g8h9_add_export_jobs.py  d5e6f7g8h9i0_add_show_recurrence.py  e6f7g8h9i0j1_add_whatnot_integration.py  f16695bf183e_initial_schema.py  g7h8i9j0k1l2_add_platform_admin_and_suspension.py
openspec/: project.md
openspec/changes/add-phase1-foundation/: design.md  proposal.md  tasks.md
openspec/changes/add-phase2-sales-analytics/: design.md  proposal.md  tasks.md
openspec/changes/add-phase3-shipping/: design.md  proposal.md  tasks.md
openspec/changes/add-phase4-advanced-analytics/: design.md  proposal.md  tasks.md
openspec/changes/add-phase5-web-ui/: design.md  proposal.md  tasks.md
openspec/changes/add-phase6-whatnot-integration/: design.md  proposal.md  tasks.md
openspec/changes/add-super-admin-portal/: design.md  proposal.md  tasks.md
scripts/: __main__.py  seed.py
services/analytics/: Dockerfile  Dockerfile.worker  app.py  wsgi.py
services/analytics/exporters/: charts.py  csv_exporter.py  pdf_exporter.py
services/analytics/models/: models.py
services/analytics/repositories/: export_repository.py
services/analytics/routes/: __init__.py  analytics_routes.py  export_routes.py
services/analytics/schemas/: schemas.py
services/analytics/services/: __init__.py  analytics_service.py
services/analytics/tasks/: celery_app.py  export_tasks.py
services/analytics/tests/: conftest.py  test_exporters.py  test_phase4.py  test_routes.py  test_services.py
services/auth/: Dockerfile  __init__.py  app.py  decorators.py  wsgi.py
services/auth/models/: admin_audit_log.py  models.py
services/auth/repositories/: auth_repository.py
services/auth/routes/: account_routes.py  admin_routes.py  auth_routes.py  billing_routes.py  profile_routes.py
services/auth/schemas/: schemas.py
services/auth/services/: account_service.py  admin_service.py  auth_service.py  billing_service.py
services/auth/tests/: conftest.py  test_account_service.py  test_admin_routes.py  test_admin_service.py  test_models.py  test_repositories.py  test_routes.py  test_schemas.py  test_services.py
services/gateway/: Dockerfile  app.py  proxy.py  wsgi.py
services/gateway/middleware/: logging.py  rate_limit.py  request_id.py
services/gateway/routes/: health_routes.py  proxy_routes.py
services/gateway/tests/: conftest.py  test_health.py  test_middleware.py  test_proxy.py  test_routes.py
services/inventory/: Dockerfile  __init__.py  app.py  wsgi.py
services/inventory/models/: models.py
services/inventory/repositories/: inventory_repository.py
services/inventory/routes/: category_routes.py  csv_routes.py  (+1 more)
services/sales/: Dockerfile  app.py  wsgi.py
services/shared/: __init__.py  app_factory.py  audit.py  database.py  errors.py  events.py  health.py  logging.py  models.py  repository.py
services/shipping/: Dockerfile  app.py  wsgi.py
services/whatnot/: Dockerfile  Dockerfile.worker  __init__.py  app.py  wsgi.py
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
web/e2e/: analytics.spec.ts  auth.spec.ts  dashboard.spec.ts  fixtures.ts  global-setup.ts  inventory.spec.ts  sales.spec.ts  settings.spec.ts  shipping.spec.ts
web/src/: globals.css  main.tsx
(+197 files in other folders)
