[project]
name = "whattools"
version = "0.1.0"
description = "B2B SaaS platform providing professional-grade tools for Whatnot live-selling sellers"
requires-python = ">=3.12"
license = {text = "Proprietary"}

dependencies = [
    "flask>=3.1,<4",
    "flask-smorest>=0.45,<1",
    "flask-jwt-extended>=4.7,<5",
    "flask-limiter>=3.8,<4",
    "flask-cors>=5,<6",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.14,<2",
    "marshmallow>=3.23,<4",
    "psycopg2-binary>=2.9,<3",
    "redis>=5.2,<6",
    "celery>=5.4,<6",
    "bcrypt>=4.2,<5",
    "structlog>=24.4,<26",
    "gunicorn>=23,<24",
    "httpx>=0.28,<1",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-cov>=6,<7",
    "pytest-flask>=1.3,<2",
    "factory-boy>=3.3,<4",
    "ruff>=0.9,<1",
    "mypy>=1.14,<2",
    "bandit>=1.8,<2",
    "safety>=3,<4",
    "types-redis>=4,<5",
    "sqlalchemy[mypy]>=2.0,<3",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["services*"]

# ==============================================================================
# Ruff
# ==============================================================================
[tool.ruff]
line-length = 120
target-version = "py312"
src = ["services"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # Ruff-specific rules
]
ignore = [
    "S101",  # assert used (needed for tests)
]

[tool.ruff.lint.isort]
known-first-party = ["services"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106"]

# ==============================================================================
# mypy
# ==============================================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = ["celery.*", "flask_smorest.*", "flask_limiter.*", "flask_cors.*", "flask_jwt_extended.*", "factory.*"]
ignore_missing_imports = true

# ==============================================================================
# pytest
# ==============================================================================
[tool.pytest.ini_options]
testpaths = ["services"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=services",
    "--cov-report=term-missing",
    "--cov-report=html:docs/coverage",
    "--cov-fail-under=90",
    "-v",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "security: Security tests",
]

# ==============================================================================
# Bandit
# ==============================================================================
[tool.bandit]
exclude_dirs = ["tests", "*/tests"]
skips = ["B101"]

# ==============================================================================
# Coverage
# ==============================================================================
[tool.coverage.run]
source = ["services"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/wsgi.py",
    "services/shared/repository.py",
    "services/shared/database.py",
    "services/shared/app_factory.py",
    "services/auth/app.py",
    "services/inventory/app.py",
    "services/sales/app.py",
    "services/analytics/app.py",
    "services/shipping/app.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
